refactor(quick-core): 重构项目配置和依赖
- 更新 MqttController 中的请求类型
- 添加 Druid 数据源配置
- 新增 Dockerfile 构建脚本
- 调整应用配置文件结构
- 更新日志配置
- 添加报警相关依赖和配置
- 优化 pom.xml 中的依赖版本